fix width on mobile

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -3,7 +3,7 @@
   max-width: 75%;
 }
 
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 900px) {
   main + .col-md-3 {
     margin-left: unset;
     padding-left: 5rem;
@@ -48,4 +48,11 @@
 }
 ::-moz-selection {
   background: #ff914d90; /* Gecko Browsers */
+}
+
+
+@font-face {
+  font-family: "Open Sans";
+  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
+       url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
 }
